# backend/src/requests/index.ts
@@ -1,9 +1,4 @@
 export { fetchExpirationDates } from './getDates';
-export {
-  fetchQuote,
-  fetchBatchQuotes,
-  type QuoteSummary,
-  type BatchQuoteSummary,
-} from './getQuote';
+export { fetchQuote, fetchQuotes, type QuoteSummary } from './getQuote';
 export { fetchOptionData, type OptionChainSummary } from './getOptions';
 export { fetchEarnings } from './getEarnings';
